# train_tracker

./: .env-test  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: docker.md
src/: __init__.py  exceptions.py  main.py
src/api/: auth.py  dependency.py  exercises.py  workouts.py
src/core/: celery_config.py  config.py  db.py  db_manager.py  redis_config.py  redis_manager.py  tasks.py
src/migrations/: env.py
src/migrations/versions/: 025701d52ce5_added_table_user_id_for_workouts.py  2025_11_09_1806-73fa82da46fd_fix_models_using_mixins.py  2025_11_23_1850-febde3c54137_id_to_int.py  2025_11_24_1952-e06a4b46f07a_fix_description_none.py  7bf692320cee_added.py  c3c2a0fb2efd_fix.py  c7047d956e36_fix_cascade.py  d6024864acac_initial.py
src/models/: __init__.py  exercises.py  users.py  workouts.py
src/models/mixins/: timestamp_mixins.py
src/repositories/: base.py  exercises.py  users.py  workouts.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: exercises.py  users.py  workouts.py
src/services/: auth.py  base.py  exercises.py  workouts.py
tests/: base_test.py  conftest.py
tests/integration_tests/: test_auth.py  test_exercises.py  test_workouts.py
tests/unit_tests/: test_auth.py  test_exercises.py  test_workouts.py
