[tool.poetry]
name = "train-tracker"
version = "0.1.0"
description = ""
authors = ["Grayholm <rodiongrayholm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.3"
sqlalchemy = "^2.0.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
